// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<styled.div
  bg="https://assets.itsmycargo.com/assets/images/welcome/country/header.jpg"
  className="layout-row flex-100 layout-align-center"
  tenant={
    Object {
      "emails": Object {
        "sales": Object {
          "air": "sales@demo.com",
          "general": "sales@demo.com",
          "ocean": "sales@demo.com",
          "rail": "sales@demo.com",
        },
        "support": Object {
          "air": "imc.air@demo.com",
          "general": "support@demo.com",
          "ocean": "imc.sea@demo.com",
          "rail": "imc.rail@demo.com",
        },
      },
      "id": 123,
      "name": "TENANT_NAME",
      "phones": Object {
        "support": "TENANT_SUPPORT_PHONE",
      },
      "scope": Object {
        "cargo_info_level": "text",
        "carriage_options": Object {
          "on_carriage": Object {
            "export": "mandatory",
            "import": "mandatory",
          },
          "pre_carriage": Object {
            "export": "optional",
            "import": "optional",
          },
        },
        "closed_quotation_tool": true,
        "customs_export_paper": false,
        "detailed_billing": true,
        "has_customs": true,
        "has_insurance": true,
        "hide_grand_total": true,
        "mandatory_form_fields": Object {
          "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
          "total_goods_value": 3370,
        },
        "modes_of_transport": Object {
          "air": Object {
            "AIR_LOAD_TYPE": 0,
          },
          "ocean": Object {
            "OCEAN_LOAD_TYPE": 2,
          },
          "rail": Object {
            "RAIL_LOAD_TYPE": 0,
          },
          "truck": Object {
            "TRUCK_LOAD_TYPE": 0,
          },
        },
        "terms": Array [
          "FOO_TERM",
          "BAR_TERM",
        ],
      },
      "subdomain": "TENANT_SUBDOMAIN",
      "theme": Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      },
    }
  }
  url={false}
>
  <div
    className="layout-row flex-100 layout-wrap"
  >
    <div
      className="flex-100 layout-row"
    >
      <Header
        component={null}
        currentStage="stage1"
        error={null}
        invert={true}
        isLanding={true}
        loggingIn={false}
        loginAttempt={false}
        noMessages={true}
        noRedirect={false}
        registering={false}
        req={null}
        scrollable={true}
        showModal={false}
        showRegistration={false}
        stage={null}
        t={[Function]}
        tenant={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-center layout-wrap"
    >
      <div
        className="content_wrapper flex-100 layout-row layout-wrap layout-align-center-center"
      >
        <div
          className="flex-75 banner_text"
        >
          <img
            alt=""
            className="flex-none tenant_logo_landing"
            src=""
          />
          <h2
            className="flex-none"
          >
            <b>
              Welcome to the
            </b>
            <br />
            <i>
              TENANT_NAME
            </i>
            <br />
            <b>
              online quoting tool
            </b>
          </h2>
          <div
            className="wrapper_hr"
          >
            <hr />
          </div>
          <div
            className="wrapper_h3"
          >
            <h3
              className="flex-none"
            >
              Enjoy our modern and easy to use 
              <b>
                quoting tool
              </b>
               right away. Finally, shipping is as simple as it should be.
            </h3>
          </div>
        </div>
        <ButtonSection
          bookNow={[Function]}
          className="hide_h_xxs"
          showLogo={true}
          t={[Function]}
          tenant={
            Object {
              "emails": Object {
                "sales": Object {
                  "air": "sales@demo.com",
                  "general": "sales@demo.com",
                  "ocean": "sales@demo.com",
                  "rail": "sales@demo.com",
                },
                "support": Object {
                  "air": "imc.air@demo.com",
                  "general": "support@demo.com",
                  "ocean": "imc.sea@demo.com",
                  "rail": "imc.rail@demo.com",
                },
              },
              "id": 123,
              "name": "TENANT_NAME",
              "phones": Object {
                "support": "TENANT_SUPPORT_PHONE",
              },
              "scope": Object {
                "cargo_info_level": "text",
                "carriage_options": Object {
                  "on_carriage": Object {
                    "export": "mandatory",
                    "import": "mandatory",
                  },
                  "pre_carriage": Object {
                    "export": "optional",
                    "import": "optional",
                  },
                },
                "closed_quotation_tool": true,
                "customs_export_paper": false,
                "detailed_billing": true,
                "has_customs": true,
                "has_insurance": true,
                "hide_grand_total": true,
                "mandatory_form_fields": Object {
                  "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                  "total_goods_value": 3370,
                },
                "modes_of_transport": Object {
                  "air": Object {
                    "AIR_LOAD_TYPE": 0,
                  },
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": 2,
                  },
                  "rail": Object {
                    "RAIL_LOAD_TYPE": 0,
                  },
                  "truck": Object {
                    "TRUCK_LOAD_TYPE": 0,
                  },
                },
                "terms": Array [
                  "FOO_TERM",
                  "BAR_TERM",
                ],
              },
              "subdomain": "TENANT_SUBDOMAIN",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 1,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-40 layout-row layout-align-center layout-wrap"
    >
      <ButtonSection
        bookNow={[Function]}
        className="hide_h_gt_xxs"
        showLogo={true}
        t={[Function]}
        tenant={
          Object {
            "emails": Object {
              "sales": Object {
                "air": "sales@demo.com",
                "general": "sales@demo.com",
                "ocean": "sales@demo.com",
                "rail": "sales@demo.com",
              },
              "support": Object {
                "air": "imc.air@demo.com",
                "general": "support@demo.com",
                "ocean": "imc.sea@demo.com",
                "rail": "imc.rail@demo.com",
              },
            },
            "id": 123,
            "name": "TENANT_NAME",
            "phones": Object {
              "support": "TENANT_SUPPORT_PHONE",
            },
            "scope": Object {
              "cargo_info_level": "text",
              "carriage_options": Object {
                "on_carriage": Object {
                  "export": "mandatory",
                  "import": "mandatory",
                },
                "pre_carriage": Object {
                  "export": "optional",
                  "import": "optional",
                },
              },
              "closed_quotation_tool": true,
              "customs_export_paper": false,
              "detailed_billing": true,
              "has_customs": true,
              "has_insurance": true,
              "hide_grand_total": true,
              "mandatory_form_fields": Object {
                "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                "total_goods_value": 3370,
              },
              "modes_of_transport": Object {
                "air": Object {
                  "AIR_LOAD_TYPE": 0,
                },
                "ocean": Object {
                  "OCEAN_LOAD_TYPE": 2,
                },
                "rail": Object {
                  "RAIL_LOAD_TYPE": 0,
                },
                "truck": Object {
                  "TRUCK_LOAD_TYPE": 0,
                },
              },
              "terms": Array [
                "FOO_TERM",
                "BAR_TERM",
              ],
            },
            "subdomain": "TENANT_SUBDOMAIN",
            "theme": Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
  </div>
</styled.div>
`;

exports[`theme has truthy properties 1`] = `
<styled.div
  bg="green"
  className="layout-row flex-100 layout-align-center"
  tenant={
    Object {
      "emails": Object {
        "sales": Object {
          "air": "sales@demo.com",
          "general": "sales@demo.com",
          "ocean": "sales@demo.com",
          "rail": "sales@demo.com",
        },
        "support": Object {
          "air": "imc.air@demo.com",
          "general": "support@demo.com",
          "ocean": "imc.sea@demo.com",
          "rail": "imc.rail@demo.com",
        },
      },
      "id": 123,
      "name": "TENANT_NAME",
      "phones": Object {
        "support": "TENANT_SUPPORT_PHONE",
      },
      "scope": Object {
        "cargo_info_level": "text",
        "carriage_options": Object {
          "on_carriage": Object {
            "export": "mandatory",
            "import": "mandatory",
          },
          "pre_carriage": Object {
            "export": "optional",
            "import": "optional",
          },
        },
        "closed_quotation_tool": true,
        "customs_export_paper": false,
        "detailed_billing": true,
        "has_customs": true,
        "has_insurance": true,
        "hide_grand_total": true,
        "mandatory_form_fields": Object {
          "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
          "total_goods_value": 3370,
        },
        "modes_of_transport": Object {
          "air": Object {
            "AIR_LOAD_TYPE": 0,
          },
          "ocean": Object {
            "OCEAN_LOAD_TYPE": 2,
          },
          "rail": Object {
            "RAIL_LOAD_TYPE": 0,
          },
          "truck": Object {
            "TRUCK_LOAD_TYPE": 0,
          },
        },
        "terms": Array [
          "FOO_TERM",
          "BAR_TERM",
        ],
      },
      "subdomain": "TENANT_SUBDOMAIN",
      "theme": Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      },
    }
  }
  url={false}
>
  <div
    className="layout-row flex-100 layout-wrap"
  >
    <div
      className="flex-100 layout-row"
    >
      <Header
        component={null}
        currentStage="stage1"
        error={null}
        invert={true}
        isLanding={true}
        loggingIn={false}
        loginAttempt={false}
        noMessages={true}
        noRedirect={false}
        registering={false}
        req={null}
        scrollable={true}
        showModal={false}
        showRegistration={false}
        stage={null}
        t={[Function]}
        tenant={null}
        theme={
          Object {
            "background": "green",
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
            "logoLarge": "LOGO_LARGE",
            "logoWhite": "LOGO_WHITE",
            "welcome_text": "WELCOME_TEXT",
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-center layout-wrap"
    >
      <div
        className="content_wrapper flex-100 layout-row layout-wrap layout-align-center-center"
      >
        <div
          className="flex-75 banner_text"
        >
          <img
            alt=""
            className="flex-none tenant_logo_landing"
            src="LOGO_WHITE"
          />
          <h2
            className="flex-none"
          >
            <b>
              Welcome to the
            </b>
            <br />
            <i>
              TENANT_NAME
            </i>
            <br />
            <b>
              WELCOME_TEXT
            </b>
          </h2>
          <div
            className="wrapper_hr"
          >
            <hr />
          </div>
          <div
            className="wrapper_h3"
          >
            <h3
              className="flex-none"
            >
              Enjoy our modern and easy to use 
              <b>
                quoting tool
              </b>
               right away. Finally, shipping is as simple as it should be.
            </h3>
          </div>
        </div>
        <ButtonSection
          bookNow={[Function]}
          className="hide_h_xxs"
          showLogo={true}
          t={[Function]}
          tenant={
            Object {
              "emails": Object {
                "sales": Object {
                  "air": "sales@demo.com",
                  "general": "sales@demo.com",
                  "ocean": "sales@demo.com",
                  "rail": "sales@demo.com",
                },
                "support": Object {
                  "air": "imc.air@demo.com",
                  "general": "support@demo.com",
                  "ocean": "imc.sea@demo.com",
                  "rail": "imc.rail@demo.com",
                },
              },
              "id": 123,
              "name": "TENANT_NAME",
              "phones": Object {
                "support": "TENANT_SUPPORT_PHONE",
              },
              "scope": Object {
                "cargo_info_level": "text",
                "carriage_options": Object {
                  "on_carriage": Object {
                    "export": "mandatory",
                    "import": "mandatory",
                  },
                  "pre_carriage": Object {
                    "export": "optional",
                    "import": "optional",
                  },
                },
                "closed_quotation_tool": true,
                "customs_export_paper": false,
                "detailed_billing": true,
                "has_customs": true,
                "has_insurance": true,
                "hide_grand_total": true,
                "mandatory_form_fields": Object {
                  "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                  "total_goods_value": 3370,
                },
                "modes_of_transport": Object {
                  "air": Object {
                    "AIR_LOAD_TYPE": 0,
                  },
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": 2,
                  },
                  "rail": Object {
                    "RAIL_LOAD_TYPE": 0,
                  },
                  "truck": Object {
                    "TRUCK_LOAD_TYPE": 0,
                  },
                },
                "terms": Array [
                  "FOO_TERM",
                  "BAR_TERM",
                ],
              },
              "subdomain": "TENANT_SUBDOMAIN",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "background": "green",
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
              "logoLarge": "LOGO_LARGE",
              "logoWhite": "LOGO_WHITE",
              "welcome_text": "WELCOME_TEXT",
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 1,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-40 layout-row layout-align-center layout-wrap"
    >
      <ButtonSection
        bookNow={[Function]}
        className="hide_h_gt_xxs"
        showLogo={true}
        t={[Function]}
        tenant={
          Object {
            "emails": Object {
              "sales": Object {
                "air": "sales@demo.com",
                "general": "sales@demo.com",
                "ocean": "sales@demo.com",
                "rail": "sales@demo.com",
              },
              "support": Object {
                "air": "imc.air@demo.com",
                "general": "support@demo.com",
                "ocean": "imc.sea@demo.com",
                "rail": "imc.rail@demo.com",
              },
            },
            "id": 123,
            "name": "TENANT_NAME",
            "phones": Object {
              "support": "TENANT_SUPPORT_PHONE",
            },
            "scope": Object {
              "cargo_info_level": "text",
              "carriage_options": Object {
                "on_carriage": Object {
                  "export": "mandatory",
                  "import": "mandatory",
                },
                "pre_carriage": Object {
                  "export": "optional",
                  "import": "optional",
                },
              },
              "closed_quotation_tool": true,
              "customs_export_paper": false,
              "detailed_billing": true,
              "has_customs": true,
              "has_insurance": true,
              "hide_grand_total": true,
              "mandatory_form_fields": Object {
                "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                "total_goods_value": 3370,
              },
              "modes_of_transport": Object {
                "air": Object {
                  "AIR_LOAD_TYPE": 0,
                },
                "ocean": Object {
                  "OCEAN_LOAD_TYPE": 2,
                },
                "rail": Object {
                  "RAIL_LOAD_TYPE": 0,
                },
                "truck": Object {
                  "TRUCK_LOAD_TYPE": 0,
                },
              },
              "terms": Array [
                "FOO_TERM",
                "BAR_TERM",
              ],
            },
            "subdomain": "TENANT_SUBDOMAIN",
            "theme": Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            },
          }
        }
        theme={
          Object {
            "background": "green",
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
            "logoLarge": "LOGO_LARGE",
            "logoWhite": "LOGO_WHITE",
            "welcome_text": "WELCOME_TEXT",
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
  </div>
</styled.div>
`;
